objects/Email_Receipient__c.object
<CustomObject>
    <label>Email Recipient</label>
    <nameField>
        <displayFormat>CON -{0000}</displayFormat>
        <label>Email Receipient Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Email Recipients</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Email Recipients</relationshipLabel>
        <relationshipName>Email_Recipients</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_email__c</fullName>
        <formula>Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Group_Object__c</fullName>
        <label>Email Group Object</label>
        <referenceTo>Email_Group_Object__c</referenceTo>
        <relationshipLabel>Email Recipients</relationshipLabel>
        <relationshipName>Email_Recipients</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
</CustomObject>